# rusvid_pyo3

./: .gitignore  Cargo.toml  README.md  input.raw  pyproject.toml  test.py
.github/workflows/: CI.yml  ci.yml
src/: error.rs  lib.rs  parser.rs  read.rs  transform.rs
