[package]
name = "python_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_ffi"
crate-type = ["cdylib"]

[dependencies]
nom = "7.1.3"
rusvid_core = { git = "https://github.com/LetsMelon/rusvid", rev = "b4c48788a2d0c1c85a11461a31540869501bba2b" }

[dependencies.pyo3]
version = "0.18.0"
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
features = ["abi3-py37"]
